<resources>
    <string name="app_name">Movie App</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_tittle">Movie Tittle</string>
    <string name="rating">Rating</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="search_movie">Search Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="title_n_title">title \n title</string>
</resources>