<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:strokeWidth="0dp"
        app:strokeColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars[3]" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/movie_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_tittle"
        android:fontFamily="@font/poppinsmedium"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/card_img"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toEndOf="@+id/card_img"
        app:layout_constraintTop_toBottomOf="@+id/movie_tittle" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/rating"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:textSize="10dp"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/img_rating"
        app:layout_constraintTop_toBottomOf="@+id/movie_tittle" />

    <ImageView
        android:id="@+id/img_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_category"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/card_img"
        app:layout_constraintTop_toBottomOf="@+id/img_rating" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toEndOf="@+id/img_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <ImageView
        android:id="@+id/img_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/card_img"
        app:layout_constraintTop_toBottomOf="@+id/img_category" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/img_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_category" />

    <ImageView
        android:id="@+id/img_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_duration"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/card_img"
        app:layout_constraintTop_toBottomOf="@+id/img_date" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="Duration"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@+id/img_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

</androidx.constraintlayout.widget.ConstraintLayout>