<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".view.home.HomeFragment">

<!--    <EditText-->
<!--        android:id="@+id/et_search"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:hint="@string/search_movie"-->
<!--        android:inputType="text"-->
<!--        android:paddingStart="15dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:fontFamily="@font/poppinsmedium"-->
<!--        android:background="@drawable/custom_input"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppinsmedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_more_populae"
                android:layout_width="30dp"
                android:layout_height="20sp"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_popular"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_popular"
                android:layout_width="0dp"
                android:layout_height="300dp"
                tools:listitem="@layout/top_movie_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

            <TextView
                android:id="@+id/tv_now_playing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/now_playing"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_popular" />

            <ImageView
                android:id="@+id/btn_more_now_playing"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/ic_next"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_now_playing"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_now_playing"
                android:layout_width="0dp"
                android:layout_height="300dp"
                tools:listitem="@layout/top_movie_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_now_playing" />

            <TextView
                android:id="@+id/tv_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/upcoming"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@id/rv_movie_now_playing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/btn_more_upcoming"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/ic_next"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_upcoming"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_now_playing" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie_upcoming"
                android:layout_width="0dp"
                android:layout_height="400dp"
                tools:listitem="@layout/top_movie_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_upcoming" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>